--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,25 @@
-.App {
-    text-align: center;
+body,
+html,
+#root,
+main {
+    padding: 0;
+    margin: 0;
+    height: 100%;
+    @apply bg-white;
 }
 
-.App-logo {
-    height: 40vmin;
-    pointer-events: none;
+* {
+    box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-    .App-logo {
-        animation: App-logo-spin infinite 20s linear;
-    }
-}
-
-.App-header {
-    background-color: #282c34;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: white;
-}
-
-.App-link {
-    color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-    from {
-        transform: rotate(0deg);
-    }
-    to {
-        transform: rotate(360deg);
-    }
+.modal::before {
+    content: '';
+    display: block;
+    background-color: rgba(0, 0, 0, 0.2);
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    position: fixed;
+    z-index: -1;
 }
